--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 <link rel="stylesheet" href="main.css"></link>
 <body>
     <button onclick="generateBoard()">Reset</button>
+    <button onclick="clearInterval(main)">Clear</button>
     <input type="text" disabled id="selected">
     <center>
         <div id="board"></div>
     </center>
     <script src="main.js"></script>
+    
 </body>
 </html>
